<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="@font/poppinsbold"
        android:text="Step 1: Enter Boolean Expression"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/booleanStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/boolean_step1"
        android:textColor="@color/black"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="@font/poppinsbold"
        android:text="Step 2: Access Operator Symbols"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/karnaughStep2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/boolean_step2"
        android:textColor="@color/black"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingHorizontal="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/boolean_exp1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Boolean Operator Information:"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/booleanStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/boolean_step3"
        android:textColor="@color/black"
        />




</LinearLayout>